# Channel-Manager

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  session_name.session  session_name.session-journal
ChatGPT/: GPT.py
ChatGPT/db/: db.py
backend/: gpt.py  main.py  utils.py
backend/db/: db.py
bot/: bot.py  handlers.py
bot/db/: config.py
chat_gpt/: gpt.py
chat_gpt/db/: config.py
client/: main.py
client/db/: config.py
db/: config.py  db.py
openai/: API_GPT.py  GPT.py
utils/: #utils.py  1utils.py  utils.py
