[tool.poetry]
name = "telegram manager groups"
version = "0.1.0"
description = ""
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.30.3"
aiogram = "^3.1.0"
schedule = "^1.2.0"
redis = "^5.0.0"
openai = "^0.28.1"
black = "^23.9.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
