[tool.poetry]
name = "telegram manager groups"
version = "0.1.0"
description = ""
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
openai = "^0.28.1"
aiogram = "^3.1.0"
telethon = "^1.30.3"
tiktoken = "^0.5.1"
colorama = "^0.4.6"
black = "^23.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
